<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/DriveMeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#388E3C"
        android:text="@string/honda"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/EatMeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#388E3C"
        android:text="Coleslaw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <Button
        android:id="@+id/VisitMeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:background="#388E3C"
        android:text="@string/dubai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/PlayMeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:background="#388E3C"
        android:text="@string/soccer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.543" />

    <Button

        android:id="@+id/FlyMeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="172dp"
        android:layout_marginEnd="16dp"

        android:text="@string/eagle"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <Button
        android:id="@+id/LikeMeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#FF6F00"
        android:text="@string/my_favorite_things"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="4dp" />


</androidx.constraintlayout.widget.ConstraintLayout>